começando a por o backend

--- a/public/index2.html
+++ b/public/index2.html
@@ -41,12 +41,12 @@
         </div>
 
         <label>Usuário</label>
-        <input required type="text" placeholder="Não use o seu nome real" />
+        <input id="usuario" required type="text" placeholder="Não use o seu nome real" />
 
         <label>Senha</label>
-        <input required type="password" placeholder="Crie uma senha" />
+        <input id="senha" required type="password" placeholder="Crie uma senha" />
 
-        <input type="submit" value="Cadastra-se" />
+        <input id="enviar" type="submit" value="Cadastra-se" />
       </form>
     </div>
     </section>
